website/app/style-3.css
/* ... */
/********* Custom table *********/
.table-boxed {
  margin-top: -22px;
  border-collapse: separate;
  border-left: 2px solid #d3d3d3;
  border-right: 2px solid #d3d3d3;
  border-bottom: 2px solid #d3d3d3;
  border-top: 2px solid #d3d3d3;
}

.table-boxed > thead > tr > th {
  border-bottom: 0 !important;
}

.file-heading {
  /* padding: 22px 15px; */
}

.panel-heading {
  border-bottom-width: 0px;
}

.oval {
  width: 100px;
  height: 50px;
  background: #eecfbf;
  -moz-border-radius: 50px / 25px;
  -webkit-border-radius: 50px / 25px;
  border-radius: 50px / 25px;
}

.row.project-tags {
  padding-bottom: 10px;
}

.tag-info {
  width: 80px;
  height: 30px;
  border-radius: 10px;
}

.command-btn {
  margin: 10px;
}

.command-symbol {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

.command-name {
  font-size: 25px;
  color: #ffffff;
  text-align: center
}

.command-symbol > i {
  color: white;
  margin: 13px 3px;
}

.tag-circle {
  width: 15px;
  height: 15px;
  border-radius: 10px;
}

.sidebar {
  width: 250px;
  margin-top: -10px;
  float: left;
  /*background-color: #3B4247;*/
  background-color: #3e4b5c;
  height: 100%;
  min-height: 100%;
  position: fixed;
}

.main-content {
  margin-top: 41px;
}


.project-task-bar {
  left: 0;
  position: fixed;
  right: 0;
  z-index: 100;
}

.taskbar {
  border-bottom: transparent;
}

.taskbar.nav.nav-tabs > li > a {
  color: #ffffff;
  font-size: 16px;
  border-radius: 0 0 0 0;
}

.taskbar.nav-tabs > li.active > a, .taskbar.nav-tabs > li.active > a:hover, .taskbar.nav-tabs > li.active > a:focus {
  background-color: #F5F5F5;
  color: #7990a3;
  border-bottom: 1px solid #F5F5F5;
}

.home-list li.list-group-item:hover {
  background-color: #eeeeee;
}
.dashboard-item {
  background-color: #ffffff;
  padding: 20px;
  height: 50px;
}

.dashboard-item:nth-child(odd){
  background-color: #F5F5F5;
}
.home-item {
  background-color: #ffffff;
  border-top-style: solid;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-top-width: 1px;
  border-bottom-color: #d1d1d1;
  border-top-color: #ffffff;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.home-item:nth-child(odd){
  background-color: #F5F5F5;
}

.home-panel-heading {
  padding-right: 7px;
}


.add-item {
  margin-right: 10px;
}

.home-item:hover {
  background-color: #eeeeee;
}

.tree-row:hover {
  background-color: #eeeeee;
}

.open-item-details {
  background-color: #e9e7dd;
  border-left: 2px solid #d1d1d1;
  border-right: 2px solid #d1d1d1;
  border-bottom: 2px solid #d1d1d1;
  border-top: 2px solid #ffffff;
}

.panel-primary {
  border-color: #c9c9c9;
}

.panel.card{
  max-height: 275px;
  overflow: hidden;
  min-height: 275px;
}
.panel.card:hover{
  overflow-y: scroll;
}
.panel.card > .panel-body{
  padding: 0px;
}

.side-by-side {
  max-height: 800px;
}

.no-max-height {
  max-height: none;
}

.panel-heading.samples-color {
  background-color: #f0ad4e;
  opacity: 1;
}

.btn-samples {
  background-color: #f0ad4e;
  opacity: .85;
}

.btn-samples-active,
.btn-samples:hover {
  background-color: #f0ad4e;
  opacity: 1;

}

.panel-heading.reviews-color {
  background-color: #4884b8;
  opacity: .85;
}

.btn-reviews {
  background-color: #4884b8;
  opacity: .75;
}

.btn-reviews-active,
.btn-reviews:hover {
  background-color: #4884b8;
  opacity: .90;
  color: white;
}

.minimized-window span {
  color: white;
}

.panel-heading.notes-color {
  background-color: #3ea7a0;
  opacity: .85;
}

.btn-notes {
  /*background-color: #3ea7a0;*/
  /*opacity: .70;*/
  color: white;
}

.btn-notes-active,
.btn-notes:hover {
  background-color: #3ea7a0;
  opacity: .90;
  color: black;
}

.panel-heading.files-color {
  background-color: #7c699f;
  opacity: .85;
}

.btn-files {
  background-color: #7c699f;
  opacity: .75;
}

.btn-files-active,
.btn-files:hover {
  /*background-color: #7c699f;*/
  opacity: .90;
  color: #ffffff;
}

.panel-heading.sideboard-color {
  background-color: #757575;
  opacity: .85;
}

.btn-sideboard {
  background-color: #757575;
  opacity: .75;
}

.btn-sideboard-active,
.btn-sideboard:hover {
  background-color: #757575;
  opacity: .90;
}

.panel-heading.processes-color {
  background-color: #e26a6a;
  opacity: 1;
}

.btn-processes {
  background-color: #e26a6a;
  opacity: .85;
}

.btn-processes-active,
.btn-processes:hover {
  /*background-color: #e26a6a;*/
  opacity: 1;
  color: white;
}

/* .trythis:hover { */
/*   text-decoration: underline; */
/* } */

.panel {
  margin-bottom: 15px;
}

.panel-heading span {
  font-size: 14px;
  font-family: Helvetica;
  color: white;
}

.panel-heading a {
  font-size: 14px;
  font-weight: bold;
  font-family: Helvetica;
  color: white;
}

.panel-heading input {
  color: black;
  margin-right: 5px;
  border: 1px solid #dce4ec;
  border-radius: 3px;
}

.home-panel-body ul {
  margin-bottom: 0px;
}

.nav-stacked > li > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
  border-right: 2px solid yellow;
}

.limit-text {
  width: 100px;
  height: 10px;
}

.row.app-container {
  margin-rightx: 15px;
  margin-leftx: 10px;
}

.nav-tabs > li > a {
  margin-right: 2px;
  line-height: 1.42857143;
  /*border: 1px solid #e7e7e7;*/
  border-radius: 4px 4px 0 0;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
  color: #2c3e50;
  border-bottom-color: transparent;
  cursor: default;
}

.selected {
  background-color: lightgreen;
}

a.action-link {
  color: white;
  font-style: normal;
}

.action-link.project-sub-action {
  font-size: 11pt;
}

.action-link-close {
  position: relative;
  top: -5px;
  color: #800000;
}

.btn-project {
  color: white;
}

a.important {
  font-size: 11pt;
}

a:hover,
a:focus {
  text-decoration: underline;
  /*font-weight: bold;*/
}

table a, .table a {
  text-decoration: none;
}

td > a {
  color: #204d65;
}
/* ... */

